# ft_ls

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  combinations.py  test_ls.sh
examples/: CMakeLists.txt  example.c  permissions.c  symlink.c
include/: file.h  parse_args.h  utils.h
lib/: CMakeLists.txt  file.c  parse_args.c  partition.c  process_files.c  utils.c
src/: CMakeLists.txt  main.c
system_test/: .gitignore  test_ls.sh
test/: CMakeLists.txt  test_parse_args.c
